--- a/Website 1/index.html
+++ b/Website 1/index.html
@@ -7,17 +7,26 @@
   <title>Document</title>
 </head>
 <body>
-  <!-- Header -->
-   <header>
-    <div class="header__container">
-      <h2 class="header__logo">AnimeX</h2>
-      <div class="links">
-        <a href="">Home</a>
-        <a href="">Trending</a>
-        <a href="">Login</a>
-        <a href="">Join</a>
+  <!-- Navbar -->
+   <nav>
+    <div class="navbar__container">
+      <h2 class="nav__logo"><a href="index.html">Leafscape</a></h2>
+
+      <div class="menu__icon" onclick="toggleMenu()">
+        &#9776;
       </div>
+
+      <div class="nav__links">
+        <li><a href="">Home</a></li>
+        <li><a href="">Trending</a></li>
+        <li><a href="">Login</a></li>
+        <li><a href="">Join</a></li>
+      </div>
+
     </div>
-   </header>
+   </nav>
+
+   <script src="index.js"></script>
+   <script src="https://kit.fontawesome.com/f8e1a90484.js" crossorigin="anonymous"></script>
 </body>
 </html>
