Done with the Home Page

--- a/Leafscape/index.html
+++ b/Leafscape/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <!-- Navbar -->
-   <nav>
+  <nav>
     <div class="navbar__container">
       <h2 class="nav__logo"><a href="index.html">Leafscape</a></h2>
 
@@ -17,24 +17,24 @@
         <i class="ri-menu-4-line"></i>
       </div>
 
-      <div class="nav__links">
-        <li><a href="">Home</a></li>
-        <li><a href="">Trending</a></li>
-        <li><a href="">Login</a></li>
-        <li><a href="">Join</a></li>
-      </div>
-
+      <ul class="nav__links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Trending</a></li>
+        <li><a href="#">Login</a></li>
+        <li><a href="#">Join</a></li>
+      </ul>
     </div>
-   </nav>
+  </nav>
 
-   <!-- Hero-Section -->
-   <header>
+  <!-- Hero Section -->
+  <header>
     <div class="hero__container">
-
       <!-- Left Section -->
       <div class="left__container">
         <h1 class="hero__title">Welcome to Leafscape</h1>
-        <p class="hero__slogan">Where nature's beauty meets modern living, bringing lush greenery, serenity, and sustainable elegance into every space, one leaf at a time.</p>
+        <p class="hero__slogan">
+          Where nature's beauty meets modern living, bringing lush greenery, serenity, and sustainable elegance into every space, one leaf at a time.
+        </p>
         <button class="hero__btn">Join Now</button>
       </div>
 
@@ -43,10 +43,77 @@
         <img src="./Assets/hero.png" alt="Plant-Photo" class="hero__img">
       </div>
     </div>
+  </header>
 
-   </header>
-   
-   <script src="index.js"></script>
-   <script src="https://kit.fontawesome.com/f8e1a90484.js" crossorigin="anonymous"></script>
+  <!-- Banner -->
+  <section>
+    <div class="banner__container">
+      <div class="upper__container"><h2>Why Leafscape?</h2></div>
+      <div class="lower__container">
+        <div class="card">
+          <i class="ri-plant-line"></i>
+          <div class="card__content">
+            <h2>Eco-Friendly</h2>
+            <p>Bringing sustainable solutions for a greener future.</p>
+          </div>
+        </div>
+        <div class="card">
+          <i class="ri-home-smile-line"></i>
+          <div class="card__content">
+            <h2>Home Aesthetic</h2>
+            <p>Enhance your living space with natural beauty.</p>
+          </div>
+        </div>
+        <div class="card">
+          <i class="ri-emotion-happy-line"></i>
+          <div class="card__content">
+            <h2>Positive Vibes</h2>
+            <p>Plants improve mood, focus, and well-being.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- About -->
+  <section>
+    <div class="about__container">
+      <div class="about__title">
+        <h2>About Us</h2>
+      </div>
+
+      <div class="about__description">
+        <p>At <span>Leafscape</span>, we believe that plants do more than just beautify spaces—they bring people together. As a <span>plant shop and social media platform</span>, we offer a diverse collection of lush greenery while fostering a vibrant community of plant lovers. Whether you're looking to add a touch of nature to your home or connect with fellow enthusiasts to share tips and experiences, Leafscape is your go-to destination. Our mission is to make plant care simple, enjoyable, and sustainable, helping you cultivate a greener lifestyle while staying connected with like-minded individuals.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+   <footer>
+    <div class="footer__container">
+      <div class="social__icons">
+        <a href=""><i class="ri-instagram-line"></i></a>
+        <a href=""><i class="ri-youtube-line"></i></a>
+        <a href=""><i class="ri-mail-line"></i></a>
+        <a href=""><i class="ri-facebook-box-line"></i></i></a>
+      </div>
+
+      <div class="footer__nav">
+        <ul>
+          <li><a href=""></a>Home</li>
+          <li><a href=""></a>News</li>
+          <li><a href=""></a>About</li>
+          <li><a href=""></a>Contact us</li>
+          <li><a href=""></a>Our team</li>
+        </ul>
+      </div>
+
+      <div class="footer__bottom">
+        <p>Copyright &copy;2025 : Leafscape</p>
+      </div>
+    </div>
+   </footer>
+
+  <script src="index.js"></script>
 </body>
 </html>
